# BitManipulationLibrary

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: cpptest_lite.cmake  sanitizers.cmake
ebml/: CMakeLists.txt  ebml.cpp  ebml.hpp  frames.cpp  internal.hpp  mkv.cpp  mkv.hpp  mkv_common.hpp  mkv_frames.hpp  tool.cpp
examples/: CMakeLists.txt  string_maps.cpp
include/: binary_map.hpp  bml.hpp  concepts.hpp  data_range.hpp  debug.hpp  destructure.hpp  errors.hpp  helper.hpp  io.hpp  io_internal.hpp  print.hpp  reader.hpp  sizes.hpp  types.hpp  writer.hpp  yaml.hpp
src/: CMakeLists.txt  common.hpp  data_range.cpp  helper.cpp  io.cpp  print.cpp  reader.cpp  source_sink.hpp  types.cpp  writer.cpp  yaml.cpp
test/: CMakeLists.txt  binary_map.cpp  bml.cpp  test_helper.hpp  types.cpp
test/ebml/: CMakeLists.txt  ebml.cpp  ebml_common.hpp  mkv.cpp
